--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ebay-api": "^8.5.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -24,12 +26,15 @@
     "moment-timezone": "^0.5.43",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "puppeteer": "^20.3.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "xml2js": "^0.6.2"
   }
 }
