--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,14 @@
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4",
